--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "vitest",
     "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint": "eslint --fix"
   },
   "devDependencies": {
     "@types/bun": "latest",
@@ -23,6 +24,7 @@
     "./adapters/*"
   ],
   "dependencies": {
+    "eslint": "^9.17.0",
     "prettier": "^3.4.2",
     "vite": "^6.0.6"
   }
