--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "aristo",
+  "name": "aritzo",
   "version": "1.0.0-next.1",
   "module": "src/index.js",
   "type": "module",
+  "npm": {
+    "publish": false
+  },
   "scripts": {
     "test": "vitest",
     "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage",
     "format": "prettier --write .",
     "lint": "eslint --fix",
-    "version": "bumpp",
-    "release": "bun test && bun -r publish"
+    "release": "release-it",
+    "release:next": "release-it --no-git --preRelease=next --npm.tag=next"
   },
   "devDependencies": {
+    "@release-it/conventional-changelog": "^9.0.4",
     "@types/bun": "latest",
     "@vitest/coverage-v8": "latest",
-    "jsdom": "^25.0.1",
-    "vitest": "latest",
-    "bumpp": "^9.9.2",
     "eslint": "^9.17.0",
+    "jsdom": "^25.0.1",
     "prettier": "^3.4.2",
-    "vite": "^6.0.6"
+    "release-it": "^17.11.0",
+    "vite": "^6.0.6",
+    "vitest": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
